<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    tools:context=".VerificationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/getotp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:text="@string/otp_verification" />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_you_an"
            android:textSize="16sp"
            android:textColor="@color/textColor"
            android:textStyle="normal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_password"
            android:textSize="16sp"
            android:textColor="@color/textColor"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="on this mobile number"
        android:textSize="16sp"
        android:textColor="@color/textColor"
        android:textStyle="normal" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_margin="15dp">
            <EditText
                android:id="@+id/editNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type your phone number"
                android:ems="1"
                android:padding="10dp"
                android:inputType="phone"
                android:textStyle="bold|normal"
                android:textSize="20sp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/background_shape"

                />
            <Button
                android:id="@+id/continueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Continue"
                android:textStyle="bold|normal"
                android:textAllCaps="false"
                android:backgroundTint="@color/primary"
                android:textSize="17sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>