<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".SetupProfileActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/avatar"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_information"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold|normal"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background ="@color/white"
            android:layout_margin="15dp">
            <EditText
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_name"
                android:ems="1"
                android:padding="10dp"
                android:textStyle="bold|normal"
                android:textSize="20sp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/background_shape"

                />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                tools:layout_editor_absoluteX="20dp">

                <RadioButton
                    android:id="@+id/radioButtonStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student" />

                <RadioButton
                    android:id="@+id/radioButtonLecturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lecturer" />

            </RadioGroup>
            <Button
                android:id="@+id/profileSubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textStyle="bold|normal"
                android:textAllCaps="false"
                android:backgroundTint="@color/primary"
                android:textSize="17sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>